# irobo-2024-2025-project2

./: .gitignore  CMakeLists.txt  package.xml  rrt_planner_plugin.xml
config/: costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle_pi.yaml  move_base_params.yaml  rrt_planner.yaml  waypoints.py
csv/: rrt_planer_metrics.csv  rrt_planer_metrics_03.csv  rrt_planer_metrics_05.csv
include/rrt_planner/: rrt_planner.h  rrt_planner_ros.h
launch/: rrt_obstacles.launch  rrt_realworld.launch  rrt_turtlebot.launch  rrt_turtlebotreal.launch
media/: mapaSalaG1.pgm  mapaSalaG1.yaml
rviz/: rrt_turtlebot_sim.rviz
src/: collision_detector.cpp  metrics.py  rrt_planer_metrics_01.csv  rrt_planner.cpp  rrt_planner_ros.cpp  waypoints.py
